<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    android:background="@drawable/in_app_background"
    android:weightSum="1"
    tools:context="com.project.diploma.elvis.diplomaproject.Settings.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="5sp"
        android:text="@string/settings"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:freezesText="true"
        android:padding="20sp"
        android:text="@string/permissions_not_granted"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="20sp"
            android:layout_weight="6"
            android:text="@string/block_incoming_calls"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="0.3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:padding="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="0.03">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20sp"
                android:text="@string/quite_hours"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quiteHoursTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_set" />

        </LinearLayout>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/upcoming_google_calendar_events"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/calendarEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="100"
            android:scrollbars="vertical"
            android:padding="@dimen/fab_margin"
            android:text="@string/no_upcoming_meetings_set_in_google_calendar"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>



</LinearLayout>