<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="start"
    android:paddingLeft="30sp"
    android:paddingRight="10sp"
    android:paddingTop="20sp"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.project.diploma.elvis.diplomaproject.Main.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Call Blocking System"
        android:fontFamily="@font/title_font"
        android:textSize="50sp"
        android:textColor="@color/white"
/>

    <Button
        android:id="@+id/logIn"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_gravity="right"
        android:layout_weight="0.07"
        android:text="@string/logIn"
        android:textSize="15sp" />

    <Button
        android:id="@+id/whitelist"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_gravity="left"
        android:layout_weight="0.07"
        android:text="@string/whitelist"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_gravity="left"
        android:layout_weight="0.07"
        android:text="@string/logtab"
        android:textSize="15sp" />

    <Button
        android:id="@+id/settings"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_gravity="left"
        android:layout_weight="0.07"
        android:text="@string/settings"
        android:textSize="15sp" />

    <Button
        android:id="@+id/about"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_gravity="left"
        android:layout_weight="0.07"
        android:text="@string/about"
        android:textSize="15sp" />

</LinearLayout>
